zg 01.10.2017 00:05:03 +0300 - build 5053

1. ошибочная посылка DN_CONTROLINPUT с Param1=-1 на любое передвижение мыши, если в первый раз вернули TRUE.

zg 30.09.2017 23:33:20 +0300 - build 5052

1. уточнение 5050.1: lua: Keys"F7 Tab" Dlg.SetFocus(3) win.Sleep(200) Keys"Esc"
   Диалог появляется на экране, а вроде не должен.

drkns 30.09.2017 14:00:05 +0100 - build 5051

1. Рефакторинг.

2. Уточнение 5049 - криво работали маски с [] и выравнивание расширений.

zg 30.09.2017 15:01:48 +0300 - build 5050

1. частично исправлена прямая отрисовка диалога на экран.

2. немодальный диалог показывается сразу.

drkns 29.09.2017 23:31:12 +0100 - build 5049

1. Начинаем разделять большой и страшный farwinapi на отдельные модули.

2. Рефакторинг.

3. С форума - падение на пустой истории.

zg 29.09.2017 11:35:02 +0300 - build 5048

1. для немодальных диалогов приходят события DN_GOTFOCUS/DN_KILLFOCUS с param1=-1, когда окно получает/теряет фокус.

zg 28.09.2017 19:22:53 +0300 - build 5047

1. если в DialogInit указать флаг FDLG_NONMODAL, то создастся и сразу запустится немодальный диалог.
   DialogRun и DialogFree для такого диалога указывать не нужно. при закрытии диалог автоматически уничтожается.

drkns 25.09.2017 22:30:09 +0100 - build 5046

1. И ещё одно уточнение 5038.

drkns 25.09.2017 20:58:23 +0100 - build 5045

1. Продолжение 4679 - определение типа запуска для системных ассоциаций, заданных без полного пути.

drkns 25.09.2017 20:22:04 +0100 - build 5044

1. Уточнение 5038.

drkns 25.09.2017 19:57:02 +0100 - build 5043

1. Уточнение 5041.

drkns 25.09.2017 08:43:19 +0100 - build 5042

1. 0003506: Падение при нажатии Shift+Enter на любой папке

drkns 24.09.2017 23:23:04 +0100 - build 5041

1. 0003501: Не гасить панели при запуске префикса по ассоциации из командной строки

drkns 24.09.2017 21:26:19 +0100 - build 5040

1. 0003504: Горячая клавиша продолжает действовать сразу после переназначения

drkns 24.09.2017 18:26:06 +0100 - build 5039

1. Уточнение 5038.2.
